# aipro_badging_system

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  README.md  RENDER_SECRETS_SETUP.md  alembic.ini  badging_system.db  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
alembic/: env.py
alembic/versions/: 1723fabe8f8c_add_onboarding_completed_at_field_for_.py  2bfe54925752_add_awards_table_for_earned_badges.py  4a5be144caf5_add_catalog_tables_programs_skills_mini_.py  616641e523e9_add_progress_badges.py  8b8ce54544c9_create_initial_users_table.py  b82afc5ef86a_add_requests_table_for_badge_approval_.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  logging.py  migration_utils.py  secrets_bootstrap.py  session.py
app/dal/: __init__.py
app/models/: __init__.py  audit_log.py  award.py  capstone.py  mini_badge.py  program.py  progress_badge.py  request.py  skill.py  user.py
app/routers/: __init__.py  admin.py  assistant.py  student.py
app/services/: __init__.py  audit_service.py  auth.py  catalog_service.py  oauth.py  onboarding.py  progress_service.py  request_service.py  roster_service.py
app/ui/: __init__.py  approval_queue.py  auth.py  award_management.py  badge_display.py  badge_picker.py  catalog_browser.py  catalog_management.py  oauth_auth.py  onboarding.py  progress_dashboard.py  request_form.py  roster.py  user_management.py
docs/: architecture_overview.md  oauth_setup_guide.md  render_deployment_notes.md
docs/logs/: phase_five_outcome.md  phase_four_outcome.md  phase_one_outcome.md  phase_three_outcome.md  phase_two_a_outcome.md  phase_two_b_outcome.md
docs/plans/: phase_five_plan.md  phase_four_plan.md  phase_one_plan.md  phase_six_plan.md  phase_three_plan.md  phase_two_b_plan.md  phase_two_plan.md
docs/specs/: product_requirements.md  project_plan.md  tech_specification.md  ui_ux_specification.md
scripts/: migrate_phase4_requests.py  seed_catalog.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_auth_integration.py  test_catalog_integration.py  test_oauth_integration.py  test_onboarding_integration.py  test_progression_integration.py
tests/unit/: test_auth_service.py  test_catalog_service.py  test_config.py  test_logging.py  test_main.py  test_oauth_service.py  test_onboarding_service.py  test_progress_service.py  test_request_service.py  test_session_manager.py
